# taskmaster

./: Cargo.toml  README.md
data/: project_32.json  project_42.json
src/: async_executor.rs  cli.rs  error.rs  file_storage.rs  interactive.rs  main.rs  notification.rs  optimizations.rs  periodic_tasks.rs  project.rs  storage.rs  task.rs  task_dependencies.rs  task_executor.rs  task_handler.rs  tui.rs  worker_pool.rs
src/data/: project_1.json  project_42.json
