[package]
name = "taskmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
clap = { version = "3.0", features = ["derive"] }
chrono = "0.4"
crossterm = "0.25"
tui = { package = "ratatui", version = "0.21" }